syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Backend";
package CecoChat.Contracts.Backend;
import "google/protobuf/timestamp.proto";
import "uuid.proto";

message BackendMessage {
  CecoChat.Contracts.Uuid message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  BackendMessageType type = 5;
  oneof data {
    string text = 6;
  }
}

enum BackendMessageType {
  UNKNOWN = 0;
  PLAIN_TEXT = 1;
}
