syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat;
import "google/protobuf/timestamp.proto";

message ClientMessage {
  string message_id = 1;
  int64 sender_id = 2;
  int64 receiver_id = 3;
  google.protobuf.Timestamp timestamp = 4;
  ClientMessageType type = 5;
  oneof data {
	  string text = 6;
  }
}

enum ClientMessageType {
  UNKNOWN = 0;
  PLAIN_TEXT = 1;
  DISCONNECT = 2;
}
